add clear window history binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,9 @@ set -g pane-base-index 1
 # bind r to reloading the config file
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
 
+# clear window & history
+bind -n M-l send-keys -R \; clear-history
+
 # pass through a ctrl-a if you press it twice
 bind C-a send-prefix
 
@@ -41,10 +44,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # disable mouse support (at least while we're learning)
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+set -g mouse off
 
 # turn on 256 color support in tmux
 #set -g default-terminal "screen-256color"
@@ -76,7 +76,6 @@ set -g message-bg colour22
 set -g message-attr bright
 
 # configure contents of status bar
-set -g status-utf8 on
 set -g status-left-length 40
 set -g status-left "#[fg=green]\"#S\""
 
