--- a/.tmux.conf
+++ b/.tmux.conf
@@ -113,9 +113,9 @@ bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
 # set up alias for turning on logging
 bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
-# tmux >= 1.8: bind "Enter" in copy mode to both copy and forward to Clipper
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "nc -q0 localhost 8377"
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe "nc -q0 localhost 8377"
+# tmux >= 2.4: bind "Enter" in copy mode to both copy and forward to Clipper
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "nc localhost 8377"
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "nc localhost 8377"
 
 # Add truecolor support
 # Enable RGB colour if running in xterm(1)
