--- a/.gitconfig
+++ b/.gitconfig
@@ -70,7 +70,7 @@
   dt = difftool
   div = divergence
   dc = diff --cached
-  fa = fetch --all
+  fa = fetch --all --prune
   ff = merge --ff-only
   h = !git hd
   hd = !git l -1
